--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -88,3 +88,78 @@ button:hover{
 #chk:checked ~ .signup label{
 	transform: scale(.6);
 }
+
+
+.container {
+	width: 800px;
+	background: rgba(0, 0, 0, 0.8);
+	border-radius: 10px;
+	padding: 20px;
+	box-shadow: 5px 20px 50px #000;
+}
+
+h1 {
+	color: #fff;
+	text-align: center;
+	margin-bottom: 30px;
+}
+
+.row {
+	display: flex;
+	justify-content: space-between;
+}
+
+.card {
+	width: 30%;
+	background: #fff;
+	border-radius: 10px;
+	overflow: hidden;
+	box-shadow: 5px 20px 50px #000;
+	transition: transform 0.3s ease;
+}
+
+.card:hover {
+	transform: scale(1.05);
+}
+
+.card img {
+	width: 100%;
+	height: 150px;
+	object-fit: cover;
+}
+
+.card-body {
+	padding: 15px;
+	text-align: center;
+}
+
+.card-title {
+	font-size: 1.5em;
+	margin-bottom: 10px;
+	color: #573b8a;
+}
+
+.card-text {
+	font-size: 1em;
+	color: #333;
+	margin-bottom: 20px;
+}
+
+.btn {
+	width: 80%;
+	padding: 10px;
+	margin: 0 auto;
+	display: block;
+	color: #fff;
+	background: #573b8a;
+	border: none;
+	border-radius: 5px;
+	font-size: 1em;
+	font-weight: bold;
+	cursor: pointer;
+	transition: background 0.2s ease-in;
+}
+
+.btn:hover {
+	background: #6d44b8;
+}
